--- a/src/main/resources/views/pages/admin/ta/detail-permintaan-verifikasi.fxml
+++ b/src/main/resources/views/pages/admin/ta/detail-permintaan-verifikasi.fxml
@@ -1,21 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.effect.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 
-<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1">
-    <fx:include source="../../../components/admin/prodi/sidebar.fxml" />
+<HBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="andromeda.hebat.finalisjtiadmin.controllers.pages.admin.ta.DetailPermintaanTAVerifikasiController">
+    <fx:include source="../../../components/admin/ta/sidebar.fxml" />
     <VBox alignment="TOP_CENTER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="700.0" HBox.hgrow="ALWAYS">
         <children>
             <fx:include source="../../../components/admin/topbar.fxml" />
@@ -39,48 +34,47 @@
                     <Insets left="20.0" right="20.0" top="30.0" />
                 </VBox.margin>
             </HBox>
-         <VBox prefHeight="568.0" prefWidth="600.0">
+         <VBox prefHeight="568.0" prefWidth="600.0" VBox.vgrow="ALWAYS">
             <children>
                <HBox fx:id="card1" prefHeight="100.0" prefWidth="200.0" style="-fx-border-radius: 15; -fx-border-color: black;">
                   <children>
-                     <VBox prefHeight="118.0" prefWidth="225.0">
+                     <VBox prefHeight="120.0" prefWidth="264.0" HBox.hgrow="ALWAYS">
                         <children>
+                           <HBox prefHeight="51.0" prefWidth="159.0">
+                              <children>
+                                 <Label prefHeight="26.0" prefWidth="167.0" text="Informasi Mahasiswa " HBox.hgrow="ALWAYS">
+                                    <font>
+                                       <Font name="Reddit Sans Bold" size="16.0" />
+                                    </font></Label>
+                                 <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                       <Image url="@../../../../img/info-circle.png" />
+                                    </image>
+                                 </ImageView>
+                              </children>
+                           </HBox>
                            <HBox prefHeight="100.0" prefWidth="200.0">
                               <children>
-                                 <VBox prefHeight="80.0" prefWidth="276.0">
+                                 <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                                    <image>
+                                       <Image url="@../../../../img/dummy-photo.jpg" />
+                                    </image>
+                                    <clip>
+                                       <Circle centerX="25" centerY="25" radius="25" />
+                                    </clip>
+
+                                    <HBox.margin>
+                                       <Insets bottom="10.0" right="10.0" top="10.0" />
+                                    </HBox.margin>
+                                 </ImageView>
+                                 <VBox alignment="CENTER_LEFT" prefHeight="26.0" prefWidth="210.0">
                                     <children>
-                                       <HBox prefHeight="51.0" prefWidth="159.0">
-                                          <children>
-                                             <Label prefHeight="18.0" prefWidth="122.0" text="Informasi Mahasiswa " />
-                                             <ImageView fitHeight="25.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
-                                                <image>
-                                                   <Image url="@../../../../img/info-circle.png" />
-                                                </image>
-                                             </ImageView>
-                                          </children>
-                                       </HBox>
-                                       <HBox prefHeight="100.0" prefWidth="200.0">
-                                          <children>
-                                             <ImageView fitHeight="54.0" fitWidth="48.0" pickOnBounds="true" preserveRatio="true">
-                                                <image>
-                                                   <Image url="@../../img/Component%2051.png" />
-                                                </image>
-                                                <HBox.margin>
-                                                   <Insets bottom="10.0" right="10.0" top="10.0" />
-                                                </HBox.margin>
-                                             </ImageView>
-                                             <VBox alignment="CENTER_LEFT" prefHeight="26.0" prefWidth="210.0">
-                                                <children>
-                                                   <Label prefHeight="18.0" prefWidth="210.0" text="Vladimir Putin" />
-                                                   <Label text="NIM 2341720101" />
-                                                </children>
-                                                <HBox.margin>
-                                                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                                                </HBox.margin>
-                                             </VBox>
-                                          </children>
-                                       </HBox>
+                                       <Label prefHeight="18.0" prefWidth="210.0" text="Sulaiman" />
+                                       <Label text="NIM 2341720101" />
                                     </children>
+                                    <HBox.margin>
+                                       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                    </HBox.margin>
                                  </VBox>
                               </children>
                            </HBox>
@@ -89,7 +83,7 @@
                            <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                         </padding>
                      </VBox>
-                     <VBox prefHeight="110.0" prefWidth="384.0">
+                     <VBox prefHeight="110.0" prefWidth="384.0" HBox.hgrow="ALWAYS">
                         <children>
                            <HBox prefHeight="100.0" prefWidth="352.0">
                               <children>
@@ -97,8 +91,11 @@
                                     <children>
                                        <HBox prefHeight="51.0" prefWidth="159.0">
                                           <children>
-                                             <Label prefHeight="18.0" prefWidth="122.0" text="Informasi Permintaan" />
-                                             <ImageView fitHeight="25.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                             <Label prefHeight="26.0" prefWidth="180.0" text="Informasi Permintaan">
+                                                <font>
+                                                   <Font name="Reddit Sans Bold" size="16.0" />
+                                                </font></Label>
+                                             <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
                                                 <image>
                                                    <Image url="@../../../../img/info-circle.png" />
                                                 </image>
@@ -113,7 +110,7 @@
                                              <VBox alignment="CENTER_LEFT" prefHeight="67.0" prefWidth="242.0">
                                                 <children>
                                                    <Label prefHeight="18.0" prefWidth="210.0" text="Jenis" />
-                                                   <Label text="Administrasi Prodi" />
+                                                   <Label text="Tugas akhir" />
                                                 </children>
                                              </VBox>
                                              <VBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="233.0">
@@ -169,12 +166,15 @@
                      <Insets left="20.0" right="20.0" top="20.0" />
                   </VBox.margin>
                   <children>
-                     <VBox prefHeight="376.0" prefWidth="302.0">
+                     <VBox prefHeight="376.0" prefWidth="302.0" HBox.hgrow="ALWAYS">
                         <children>
                            <HBox prefHeight="23.0" prefWidth="282.0">
                               <children>
-                                 <Label prefHeight="18.0" prefWidth="122.0" text="Detail Informasi" />
-                                 <ImageView fitHeight="25.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                 <Label prefHeight="18.0" prefWidth="122.0" text="Detail Informasi">
+                                    <font>
+                                       <Font name="Reddit Sans Bold" size="14.0" />
+                                    </font></Label>
+                                 <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
                                     <image>
                                        <Image url="@../../../../img/info-circle.png" />
                                     </image>
@@ -184,7 +184,7 @@
                                  <Insets bottom="15.0" left="20.0" right="15.0" top="20.0" />
                               </VBox.margin>
                            </HBox>
-                           <Label prefHeight="10.0" prefWidth="251.0" text="Distribusi Laporan Skripsi" textFill="#7e7e7e">
+                           <Label prefHeight="10.0" prefWidth="251.0" text="Laporan tugas akhir/skripsi" textFill="#7e7e7e">
                               <VBox.margin>
                                  <Insets bottom="5.0" left="15.0" right="15.0" top="5.0" />
                               </VBox.margin>
@@ -197,7 +197,7 @@
                                  <Insets left="5.0" />
                               </padding>
                            </Label>
-                           <Label prefHeight="10.0" prefWidth="251.0" text="Distribusi Laporan Magang" textFill="#7e7e7e">
+                           <Label prefHeight="10.0" prefWidth="251.0" text="Program/aplikasi" textFill="#7e7e7e">
                               <VBox.margin>
                                  <Insets bottom="5.0" left="15.0" right="15.0" />
                               </VBox.margin>
@@ -210,7 +210,7 @@
                                  <Insets bottom="20.0" left="15.0" right="15.0" />
                               </VBox.margin>
                            </Label>
-                           <Label prefHeight="10.0" prefWidth="251.0" text="Distribusi Laporan Kompensasi" textFill="#7e7e7e">
+                           <Label prefHeight="10.0" prefWidth="251.0" text="Bukti publikasi" textFill="#7e7e7e">
                               <VBox.margin>
                                  <Insets bottom="5.0" left="15.0" right="15.0" />
                               </VBox.margin>
@@ -223,36 +223,29 @@
                                  <Insets bottom="20.0" left="15.0" right="15.0" />
                               </VBox.margin>
                            </Label>
-                           <Label prefHeight="10.0" prefWidth="251.0" text="Sertifikat TOEIC" textFill="#7e7e7e">
-                              <VBox.margin>
-                                 <Insets bottom="5.0" left="15.0" right="15.0" />
-                              </VBox.margin>
-                           </Label>
-                           <Label prefHeight="10.0" prefWidth="251.0" text="sertifikattoeic.pdf">
-                              <padding>
-                                 <Insets left="5.0" />
-                              </padding>
-                              <VBox.margin>
-                                 <Insets left="15.0" right="15.0" />
-                              </VBox.margin>
-                           </Label>
                         </children>
                         <padding>
                            <Insets left="10.0" top="10.0" />
                         </padding>
                      </VBox>
-                     <VBox prefHeight="376.0" prefWidth="308.0">
+                     <VBox prefHeight="376.0" prefWidth="308.0" HBox.hgrow="ALWAYS">
                         <children>
-                           <Label prefHeight="10.0" prefWidth="251.0" text="Distribusi Laporan Skripsi" textFill="#7e7e7e">
+                           <Label prefHeight="10.0" prefWidth="251.0" text="Proses Verifikasi">
                               <VBox.margin>
-                                 <Insets bottom="10.0" right="20.0" top="35.0" />
+                                 <Insets bottom="10.0" right="20.0" top="20.0" />
                               </VBox.margin>
+                              <font>
+                                 <Font name="Reddit Sans Bold" size="16.0" />
+                              </font>
                            </Label>
-                           <Label prefHeight="10.0" prefWidth="251.0" text="Staff Administrasi Prodi" textFill="#7e7e7e" />
                            <HBox prefHeight="18.0" prefWidth="272.0">
                               <children>
-                                 <CheckBox mnemonicParsing="false" prefHeight="18.0" prefWidth="83.0" text="Verify" />
-                                 <CheckBox mnemonicParsing="false" prefHeight="18.0" prefWidth="150.0" text="Reject" />
+                                 <RadioButton fx:id="acceptRadioBtn" mnemonicParsing="false" text="Setuju">
+                                    <HBox.margin>
+                                       <Insets right="30.0" />
+                                    </HBox.margin>
+                                 </RadioButton>
+                                 <RadioButton fx:id="rejectRadioBtn" layoutX="10.0" layoutY="10.0" mnemonicParsing="false" text="Tolak" />
                               </children>
                               <VBox.margin>
                                  <Insets left="10.0" top="10.0" />
@@ -275,11 +268,21 @@
                      </VBox>
                   </children>
                </HBox>
-               <Pane prefHeight="50.0" prefWidth="600.0">
-                  <children>
-                     <Button layoutX="463.0" layoutY="13.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="97.0" text="Button" />
-                  </children>
-               </Pane>
+               <BorderPane prefHeight="67.0" prefWidth="600.0">
+                  <right>
+                     <Button contentDisplay="RIGHT" mnemonicParsing="false" prefHeight="25.0" prefWidth="97.0" style="-fx-background-color: #052C65;" text="Kirim" textFill="WHITE" BorderPane.alignment="CENTER">
+                        <font>
+                           <Font name="Reddit Sans Regular" size="12.0" />
+                        </font>
+                        <BorderPane.margin>
+                           <Insets right="25.0" />
+                        </BorderPane.margin>
+                     </Button>
+                  </right>
+                  <VBox.margin>
+                     <Insets bottom="30.0" top="20.0" />
+                  </VBox.margin>
+               </BorderPane>
             </children>
          </VBox>
         </children>
