--- a/src/main/resources/views/pages/admin/ta/detail-permintaan-verifikasi.fxml
+++ b/src/main/resources/views/pages/admin/ta/detail-permintaan-verifikasi.fxml
@@ -69,8 +69,8 @@
                                  </ImageView>
                                  <VBox alignment="CENTER_LEFT" prefHeight="26.0" prefWidth="210.0">
                                     <children>
-                                       <Label prefHeight="18.0" prefWidth="210.0" text="Sulaiman" />
-                                       <Label text="NIM 2341720101" />
+                                       <Label fx:id="textNamaLengkap" prefHeight="18.0" prefWidth="210.0" text="Sulaiman" />
+                                       <Label fx:id="textNim" text="NIM 2341720101" />
                                     </children>
                                     <HBox.margin>
                                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -116,7 +116,7 @@
                                              <VBox alignment="CENTER_LEFT" prefHeight="46.0" prefWidth="233.0">
                                                 <children>
                                                    <Label prefHeight="18.0" prefWidth="210.0" text="ID" />
-                                                   <Label text="REQ-0100145" />
+                                                   <Label fx:id="textIDVerifikasi" text="REQ-0100145" />
                                                 </children>
                                                 <HBox.margin>
                                                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
@@ -125,7 +125,7 @@
                                              <VBox alignment="CENTER_LEFT" prefHeight="26.0" prefWidth="210.0">
                                                 <children>
                                                    <Label prefHeight="18.0" prefWidth="210.0" text="Status" />
-                                                   <Label text="Proses" />
+                                                   <Label fx:id="textStatus" text="Proses" />
                                                 </children>
                                              </VBox>
                                           </children>
